# tf-mcp-server

./: .dockerignore  .env.example  .gitattributes  .gitignore  CONTRIBUTE.md  DOCKER.md  Dockerfile  README.md  docker-compose.yml  generate_schemas.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: docker-publish.yml
docs/: README.md  api-reference.md  aztfexport-integration.md  azure-authentication.md  azure-best-practices-tool.md  azure-documentation-tools.md  configuration.md  conftest-avm-validation.md  docker-quickstart.md  docker.md  github-authentication.md  github-registry-setup.md  installation.md  security-policies.md  terraform-commands.md  terraform-golang-source-tools.md  terraform-state-management.md  tflint-integration.md  troubleshooting.md
examples/: aztfexport_example.py  azure-best-practices-examples.md  conftest_avm_example.py  tflint_example.py
src/: __init__.py  __main__.py
src/core/: models.py  server.py  terraform_executor.py  terraform_validator.py  utils.py
src/tf_mcp_server/: __init__.py  __main__.py  launcher.py
src/tf_mcp_server/core/: __init__.py  azapi_schema_generator.py  config.py  models.py  server.py  terraform_executor.py  utils.py
src/tf_mcp_server/tools/: __init__.py  avm_docs_provider.py  azapi_docs_provider.py  aztfexport_runner.py  azurerm_docs_provider.py  best_practices.py  conftest_avm_runner.py  golang_source_provider.py  security_rules.py  terraform_runner.py  tflint_runner.py
src/tools/: __init__.py  azurerm_docs_provider.py  best_practices.py  documentation.py  security_rules.py  terraform_runner.py  validation.py
tests/: conftest.py  test_avm_docs_provider.py  test_aztfexport_best_practices.py  test_aztfexport_runner.py  test_azure_best_practices.py  test_azurerm_docs_provider.py  test_conftest_ansi_cleanup.py  test_conftest_avm_runner.py  test_datasource.py  test_detailed_attributes.py  test_golang_source_provider.py  test_service_subdirectory_search.py  test_state_management.py  test_summaries.py  test_terraform_output.py  test_terraform_runner.py  test_tflint_runner.py  test_utils.py
tests/integration/: __init__.py  test_code_cleanup_workflow.py  test_schema_and_source_tools_integration.py  test_tflint_integration.py
